# rust-push-notification

./: .gitignore  Cargo.toml  build.rs  config.example.toml
api/: api.proto
migrations/: table.sql
src/: main.rs
src/config/: apns.rs  app.rs  database.rs  firebase.rs  mod.rs  rabbitmq.rs  rpc.rs
src/entities/: device.rs  message.rs  mod.rs
src/listeners/: notification.rs
src/providers/: apns.rs  fcm.rs  mod.rs
src/rabbit/: client.rs
src/repositories/: device.rs
src/rpc/: service.rs
